--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -1,33 +1,37 @@
-prefix: "&eServerMarket &f"
-unknown-command: "未知命令, 请输入 /%c help 查看命令帮助."
+# MrXiaoM 修改，使其更接近 GlobalMarket 的风格
+prefix: "&f[&a环球市场&f] "
+unknown-command: "未知命令, 输入/%c ?以查看帮助信息"
 help:
   default:
-    - "&bServerMarket:"
-    - "&f/%c open 打开全球市场"
-    - "&f/%c sell <价格> 上架手中物品至市场"
-    - "&f/%c box 查看市场暂存盒"
+    - "&f[&a环球市场&f] &f市场帮助 /命令 <必选> (<可选>)"
+    - "&f[&a环球市场&f] &f/%c listings &a[查看市场清单]"
+    - "&f[&a环球市场&f] &f/%c create <价格> (<数量>) &a[上架手中的物品]"
+    - "&f[&a环球市场&f] &f/%c mail &a[打开自己的邮箱]"
   admin:
-    - "&bServerMarket:"
-    - "&f/%c open 打开全球市场"
-    - "&f/%c sell <价格> 上架手中物品至市场"
-    - "&f/%c box 查看市场暂存盒"
-    - "&f/%c reload 重载插件配置文件"
+    - "&f[&a环球市场&f] &f市场帮助 /命令 <必选> (<可选>)"
+    - "&f[&a环球市场&f] &f/%c listings &a[查看市场清单]"
+    - "&f[&a环球市场&f] &f/%c create <价格> (<数量>) &a[上架手中的物品]"
+    - "&f[&a环球市场&f] &f/%c mail &a[打开自己的邮箱]"
+    - "&f[&a环球市场&f] &f/%c reload &a[重载插件配置文件]"
 error-sale: "商品已被购买或已被下架."
 no-previous-page: "已经是第一页了."
 no-next-page: "已经是最后一页了."
-error-store: "该物品不在暂存库中, 可能已经领取过了."
-get-store-item: "成功从暂存库中获得 &e%item% &fx &e%amount%"
+error-store: "该物品不在邮箱中, 可能已经领取过了."
+get-store-item: "成功从邮箱中获得 &e%item% &fx &e%amount%"
 price-null: "请输入价格."
 wrong-number: "请输入一个数字."
+amount-too-big: "你手上没有这么多的物品"
+amount-too-small: "你不能出售负数或者零数量的物品"
 min-price: "价格必须大于%min%."
 max-price: "价格不能超过%max%."
 hand-air: "请手持一个物品."
 deny-item: "该物品不允许上架."
-sell: "成功上架该物品."
+sell: "上架成功."
 broadcast: "玩家 %player% 上架了物品 &e%item% &fx &e%amount%."
 shift-unsale: "按住 Shift 点击即可下架物品."
 unsale: "成功下架物品."
 is-owner: "你不能购买自己的物品."
+lack-money: "你没有足够的金钱购买这件物品."
 shift-buy: "按住 Shift 点击即可购买物品."
-sale-sell: "从市场中出售物品获得 %money%金币(税后: %last%金币)"
+sale-sell: "从市场中出售物品获得 %money% 金币(税后: %last%金币)"
 reload: "插件配置重载完成."
