--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,14 +2,17 @@
 short-command: true
 # 玩家售出物品后的税率, 1% = 0.01
 tax:
-  default: 0.1
-  vip: 0.05
+  default: 0.05
+  vip: 0.04
+  svip: 0.03
 # 日期格式
 simple-date-format: "yyyy/MM/dd HH:mm:ss"
 # 物品上架黑名单
 black-list:
   type:
-    - "STONE"
+    - "BEDROCK"
+    - "BARRIER"
+    - "COMMAND_BLOCK"
   lore:
     - "&f禁止上架"
 # 价格范围
@@ -17,6 +20,6 @@ price:
   min: 1
   max: 2000000
 # 上架物品是否公告
-sale-broadcast: true
+sale-broadcast: false
 # 是否开启商品额外信息
 sale-info: true
